# genomestore

./: .gitignore  .gitmodules  CMakeLists.txt  Preload.cmake  README.md  minimal.runsettings
src/: base.cpp  base.hpp  gene.cpp  gene.hpp  genomestore.cpp  genomestore.pb.cc  genomestore.pb.h  genomestore.proto  indexer.cpp  indexer.hpp  interval.cpp  interval.hpp  test.cpp
